[gd_scene load_steps=9 format=2]

[ext_resource path="res://FarmNer/Assets/Textures/deadDghter.png" type="Texture" id=1]
[ext_resource path="res://FarmNer/Assets/Textures/Daughter.gd" type="Script" id=2]
[ext_resource path="res://FarmNer/Assets/Textures/daughterScream.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 outline_color : hint_color;
uniform float turnOn = 0.0;

void fragment()
{
	float size_x = 1.0/float(textureSize(TEXTURE, 0).x) * turnOn;
	float size_y = 1.0/float(textureSize(TEXTURE, 0).y) * turnOn;
	vec4 sprite_color = texture(TEXTURE, UV);
	float alpha = -4.0 * sprite_color.a;
	alpha += texture(TEXTURE, UV + vec2(size_x, 0)).a;
	alpha += texture(TEXTURE, UV + vec2(-size_x, 0)).a;
	alpha += texture(TEXTURE, UV + vec2(0, size_y)).a;
	alpha += texture(TEXTURE, UV + vec2(0, -size_y)).a;
	vec4 final_color = mix(sprite_color, outline_color, clamp(alpha, 0.0, 1.0));
	COLOR = vec4(final_color.rgb, clamp(abs(alpha) + sprite_color.a, 0.0, 1.0));
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/turnOn = 0.0

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]

[node name="Daughter" type="Node2D"]
scale = Vector2( 0.667101, 0.667101 )
z_index = 2
script = ExtResource( 2 )

[node name="ChestOpenSound" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="ChestOpenSound"]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.00703049, 1.47408 )
scale = Vector2( 0.557719, 0.273114 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 11, 9 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -0.283318, -1.3036 )
scale = Vector2( 2.13959, 2.13959 )
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.264446, 0.250237 )
scale = Vector2( 0.609013, 0.609013 )
shape = SubResource( 5 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
scale = Vector2( 4.617, 4.617 )
shape = SubResource( 6 )
[connection signal="finished" from="ChestOpenSound/AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
